kubernetes/apps/flux-system/flux-instance/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  parentRefs:
    - name: envoy-external
      namespace: networking
  hostnames:
    - "flux-webhook.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
