kubernetes/apps/flux-system/flux-instance/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    # disabled
    nginx.ingress.kubernetes.io/custom-http-errors: 599
    external-dns.home.arpa/enabled: "true"
    gatus.home-operations.com/enabled: "false"
    hajimari.io/enable: "false"
spec:
  ingressClassName: external
  rules:
    - host: "flux-webhook.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
